--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,17 @@
 {
   "version": 2,
+  "name": "nexus-ui-library",
   "builds": [
     {
-      "src": "*.html",
+      "src": "**/*.html",
       "use": "@vercel/static"
     },
     {
-      "src": "js/*.js",
+      "src": "**/*.css",
       "use": "@vercel/static"
     },
     {
-      "src": "styles/*.css",
+      "src": "**/*.js",
       "use": "@vercel/static"
     }
   ],
@@ -19,5 +20,7 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ]
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
 }
